# recipe-scrapers-webservice

./: .gitignore  .releaserc  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml  release.yml
src/: app.py
tests/: app_test.py  example_recipe.html
